sailfish-tests/integration-tests/tests/fails/templates/unbalanced_brace.stpl
<% for player in &players %>
  <div><%= player.name %>: <%= player.score %></div>
<% } %>
